Issue #69 gelöst: z-index für infobox angepasst.

--- a/src/app/components/map/map.scss
+++ b/src/app/components/map/map.scss
@@ -6,7 +6,7 @@
   padding: 1.2rem;
   min-width: 14rem;
   max-width: 90%;
-  z-index:4;
+  z-index:0;
 
 
   li {
